--- a/afonso.html
+++ b/afonso.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Afonso Agra</h1>
-	<img src="file:///C:/Users/Aluno/Pictures/Saved%20Pictures/%C3%81rvores-%C3%81rvore-PNG%20(1).webp">
+	<img src="https://th.bing.com/th/id/OIP.XeDp5SDJJL5ajss_JDzjMgHaGt?rs=1&pid=ImgDetMain">
 	<h2>o melhor professor de biologia</h2>
 </body>
 </html>
