--- a/afonso.html
+++ b/afonso.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Afonso Agra</h1>
-	<img src="https://th.bing.com/th/id/OIP.XeDp5SDJJL5ajss_JDzjMgHaGt?rs=1&pid=ImgDetMain">
+	<img src="https://images.pexels.com/photos/1598377/pexels-photo-1598377.jpeg?cs=srgb&dl=animal-animal-photography-big-cat-1598377.jpg&fm=jpg">
 	<h2>o melhor professor de biologia</h2>
 </body>
 </html>
